# Copyright 2024 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@rules_cc//cc:defs.bzl", "cc_library", "cc_test")

cc_library(
    name = "scoped_cbor",
    hdrs = [
        "scoped_cbor.h",
    ],
    deps = [
        "@libcbor//:cbor",
    ],
)

cc_library(
    name = "cbor_converter_utils",
    srcs = [
        "cbor_converter_utils.cc",
    ],
    hdrs = [
        "cbor_converter_utils.h",
    ],
    deps = [
        "@com_google_absl//absl/status:statusor",
        "@com_google_absl//absl/strings",
        "@libcbor//:cbor",
    ],
)

cc_library(
    name = "cbor_converter",
    srcs = [
        "cbor_converter.cc",
    ],
    hdrs = [
        "cbor_converter.h",
    ],
    visibility = [
        "//components/data_server:__subpackages__",
        "//components/tools:__subpackages__",
        "//infrastructure:__subpackages__",
    ],
    deps = [
        ":cbor_converter_utils",
        ":scoped_cbor",
        "//public/applications/pa:api_overlay_cc_proto",
        "//public/applications/pa:response_utils",
        "//public/query/v2:get_values_v2_cc_proto",
        "@com_google_absl//absl/status:statusor",
        "@com_google_protobuf//:protobuf",
        "@google_privacysandbox_servers_common//src/util/status_macro:status_macros",
        "@libcbor//:cbor",
        "@nlohmann_json//:lib",
    ],
)

cc_test(
    name = "cbor_converter_test",
    size = "small",
    srcs = ["cbor_converter_test.cc"],
    deps = [
        ":cbor_converter",
        "//public/test_util:proto_matcher",
        "@com_google_googletest//:gtest",
        "@com_google_googletest//:gtest_main",
        "@nlohmann_json//:lib",
    ],
)
